# clang

tools/clang-format/: CMakeLists.txt
tools/clang-format-vs/ClangFormat/: ClangFormat.csproj
